# pi-tube

./: .env.example  .gitignore  README.md  install.sh  main.py  pyproject.toml
.agent/skills/pi-tube/: SKILL.md
pi_tube/: __init__.py  audio.py  cli.py  config.py  downloader.py  utils.py
pi_tube/transcribe/: __init__.py  base.py  deepgram.py  groq.py
